src/test/ui/impl-header-lifetime-elision/path-elided.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/path-elided.rs:7:18
   |
LL | impl MyTrait for Foo {
   |                  ^^^ expected lifetime parameter
   |
note: the lint level is defined here
  --> $DIR/path-elided.rs:1:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
help: indicate the anonymous lifetime
   |
LL | impl MyTrait for Foo<'_> {
   |                     ++++

error: aborting due to previous error

